--- a/parth.html
+++ b/parth.html
@@ -46,18 +46,13 @@
             color: black;
         }
 
-        /* Column container */
         .row {
             display: -ms-flexbox;
-            /* IE10 */
             display: flex;
             -ms-flex-wrap: wrap;
-            /* IE10 */
             flex-wrap: wrap;
         }
 
-        /* Create two unequal columns that sits next to each other */
-        /* Sidebar/left column */
         .side {
             -ms-flex: 30%;
             /* IE10 */
@@ -66,37 +61,32 @@
             padding: 20px;
         }
 
-        /* Main column */
         .main {
             -ms-flex: 70%;
-            /* IE10 */
             flex: 70%;
             background-color: white;
             padding: 20px;
         }
 
-        /* Fake image, just for this example */
-        .fakeimg {
+
+        .img {
             background-color: #aaa;
             width: 100%;
             padding: 20px;
         }
 
-        /* Footer */
         .footer {
             padding: 20px;
             text-align: center;
             background: #ddd;
         }
 
-        /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
         @media screen and (max-width: 700px) {
             .row {
                 flex-direction: column;
             }
         }
 
-        /* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
         @media screen and (max-width: 400px) {
             .navbar design {
                 float: none;
