--- a/parth.html
+++ b/parth.html
@@ -99,35 +99,26 @@
 </head>
 
 <body>
-
     <div class="header">
-        <h1>QRT VISUALISATION OF MARKET DATA CHALLENGE
-
-        </h1>
+        <h1>QRT VISUALISATION OF MARKET DATA CHALLENGE</h1>
         <p>The enhanced way of market data</p>
     </div>
     <div class="header">
-        <h1>QRT VISUALISATION OF MARKET DATA CHALLENGE
-
-        </h1>
+        <h1>QRT VISUALISATION OF MARKET DATA CHALLENGE</h1>
         <p>The enhanced way of market data</p>
     </div>
-    <img src='candles.png' />
+    <img src='candles.png' width="800" height="1000" />
     <div class="navbar">
         <a href="#" class="right">Link</a>
     </div>
-
     <div class="main">
         <h2>CRYPTOCURRENCY UPDATE</h2>
         <h3>Select the crypto you want to update</h3>
         <h5>Bitcoin</h5>
-
-    </div>
     </div>
     <div class="footer">
         <h2>END OF THE SITE</h2>
     </div>
-
 </body>
 
 </html>
