added initial draft of memes

--- a/parth.html
+++ b/parth.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta http-equiv="refresh" content="1" />
+    <meta http-equiv="refresh" content="1.5" />
     <style>
         * {
             box-sizing: border-box;
@@ -95,6 +95,8 @@
                 width: 100%;
             }
         }
+    
+
     </style>
 </head>
 
@@ -103,11 +105,11 @@
         <h1>QRT VISUALISATION OF MARKET DATA CHALLENGE</h1>
         <p>The enhanced way of market data</p>
     </div>
-    <div class="header">
-        <h1>QRT VISUALISATION OF MARKET DATA CHALLENGE</h1>
-        <p>The enhanced way of market data</p>
-    </div>
-    <img src='candles.png' width="800" height="1000" />
+    
+    <img src='candles.png' width="1000" height="500" class="center" />
+
+    <img src='meme.png' width="800" height="500" class="center"/>
+   
     <div class="navbar">
         <a href="#" class="right">Link</a>
     </div>
