improved index data

--- a/parth.html
+++ b/parth.html
@@ -3,14 +3,14 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta http-equiv="refresh" content="1.5" />
+    <meta http-equiv="refresh" content="1" />
     <style>
         * {
             box-sizing: border-box;
         }
 
         body {
-            font-family: Arial, Helvetica, sans-serif;
+            font-family: Helvetica, sans-serif;
             margin: 0;
         }
 
@@ -18,7 +18,7 @@
             padding: 20px;
             text-align: center;
             background: #45116e;
-            color: rgb(205, 188, 188);
+            color: rgb(205, 33, 33);
         }
 
         .header h1 {
@@ -66,6 +66,7 @@
         .main {
             -ms-flex: 70%;
             flex: 70%;
+            text-align: center;
             background-color: white;
             padding: 20px;
         }
@@ -95,6 +96,8 @@
                 width: 100%;
             }
         }
+        .memes {float:inline-end}
+        .graphmain {float: left}
     
 
     </style>
@@ -104,20 +107,23 @@
     <div class="header">
         <h1>QRT VISUALISATION OF MARKET DATA CHALLENGE</h1>
         <p>The enhanced way of market data</p>
+        <div class="main">
+            <h2 allign = 'center'>BITCOIN CRYPTOCURRENCY UPDATE</h2>
+        </div>
+    </div>
+    <div class="graphmain">
+        <img src='candles.png' width="1000" height="500" />
     </div>
     
-    <img src='candles.png' width="1000" height="500" class="center" />
+    <div class ="memes">
+        <img src='meme.png' width="800" height="500" />
+    </div>
 
-    <img src='meme.png' width="800" height="500" class="center"/>
    
     <div class="navbar">
-        <a href="#" class="right">Link</a>
+        <a href="https://www.binance.com/en/price/bitcoin" class="right">If you want a real graph of binance click on this line</a>
     </div>
-    <div class="main">
-        <h2>CRYPTOCURRENCY UPDATE</h2>
-        <h3>Select the crypto you want to update</h3>
-        <h5>Bitcoin</h5>
-    </div>
+
     <div class="footer">
         <h2>END OF THE SITE</h2>
     </div>
