--- a/parth.html
+++ b/parth.html
@@ -85,7 +85,7 @@
         </div>
     </div>
     <div class="graphmain">
-        <img src='candles.png' width="700" height="400" />
+        <img src='scatter.png' width="700" height="400" />
     </div>
     
     <div class ="memes">
